// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardContainer should match the snapshot if it recieves favorites 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardContainer
    chosenCategory="favorites"
    cleanedData={
        Array [
            Object {},
            Object {},
            Object {},
          ]
    }
    currentFavorites={Array []}
    toggleFavorite={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section>
        <div />
        <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
        />
        <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
        />
        <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
        />
</section>,
      "className": "CardContainer",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div />,
          Array [
            <Card
              cardInfo={Object {}}
              currentFav=""
              toggleFavorite={[Function]}
/>,
            <Card
              cardInfo={Object {}}
              currentFav=""
              toggleFavorite={[Function]}
/>,
            <Card
              cardInfo={Object {}}
              currentFav=""
              toggleFavorite={[Function]}
/>,
          ],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "cardInfo": Object {},
            "currentFav": "",
            "toggleFavorite": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "cardInfo": Object {},
            "currentFav": "",
            "toggleFavorite": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "cardInfo": Object {},
            "currentFav": "",
            "toggleFavorite": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "section",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section>
          <div />
          <Card
                    cardInfo={Object {}}
                    currentFav=""
                    toggleFavorite={[Function]}
          />
          <Card
                    cardInfo={Object {}}
                    currentFav=""
                    toggleFavorite={[Function]}
          />
          <Card
                    cardInfo={Object {}}
                    currentFav=""
                    toggleFavorite={[Function]}
          />
</section>,
        "className": "CardContainer",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div />,
            Array [
              <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
/>,
              <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
/>,
              <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
/>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "function",
            "props": Object {
              "cardInfo": Object {},
              "currentFav": "",
              "toggleFavorite": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "cardInfo": Object {},
              "currentFav": "",
              "toggleFavorite": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "function",
            "props": Object {
              "cardInfo": Object {},
              "currentFav": "",
              "toggleFavorite": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CardContainer should match the snapshot if it recieves no favorites 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardContainer
    chosenCategory="favorites"
    cleanedData={Array []}
    currentFavorites={Array []}
    toggleFavorite={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section>
        <h1>
                No Favorites Found
        </h1>
</section>,
      "className": "CardContainer",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            No Favorites Found
</h1>,
          Array [],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "No Favorites Found",
          },
          "ref": null,
          "rendered": "No Favorites Found",
          "type": "h1",
        },
      ],
      "type": "section",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section>
          <h1>
                    No Favorites Found
          </h1>
</section>,
        "className": "CardContainer",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1>
              No Favorites Found
</h1>,
            Array [],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "No Favorites Found",
            },
            "ref": null,
            "rendered": "No Favorites Found",
            "type": "h1",
          },
        ],
        "type": "section",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CardContainer should match the snapshot if it recieves people 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardContainer
    chosenCategory="people"
    cleanedData={
        Array [
            Object {},
            Object {},
            Object {},
          ]
    }
    currentFavorites={Array []}
    toggleFavorite={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section>
        <div />
        <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
        />
        <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
        />
        <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
        />
</section>,
      "className": "CardContainer",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div />,
          Array [
            <Card
              cardInfo={Object {}}
              currentFav=""
              toggleFavorite={[Function]}
/>,
            <Card
              cardInfo={Object {}}
              currentFav=""
              toggleFavorite={[Function]}
/>,
            <Card
              cardInfo={Object {}}
              currentFav=""
              toggleFavorite={[Function]}
/>,
          ],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "cardInfo": Object {},
            "currentFav": "",
            "toggleFavorite": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "cardInfo": Object {},
            "currentFav": "",
            "toggleFavorite": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "cardInfo": Object {},
            "currentFav": "",
            "toggleFavorite": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "section",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section>
          <div />
          <Card
                    cardInfo={Object {}}
                    currentFav=""
                    toggleFavorite={[Function]}
          />
          <Card
                    cardInfo={Object {}}
                    currentFav=""
                    toggleFavorite={[Function]}
          />
          <Card
                    cardInfo={Object {}}
                    currentFav=""
                    toggleFavorite={[Function]}
          />
</section>,
        "className": "CardContainer",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div />,
            Array [
              <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
/>,
              <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
/>,
              <Card
                cardInfo={Object {}}
                currentFav=""
                toggleFavorite={[Function]}
/>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "function",
            "props": Object {
              "cardInfo": Object {},
              "currentFav": "",
              "toggleFavorite": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "cardInfo": Object {},
              "currentFav": "",
              "toggleFavorite": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "function",
            "props": Object {
              "cardInfo": Object {},
              "currentFav": "",
              "toggleFavorite": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
